--- a/powerbi-docs/developer/TOC.yml
+++ b/powerbi-docs/developer/TOC.yml
@@ -102,6 +102,8 @@
               href: embed-sample-for-customers.md
             - name: Inserir o conteúdo para sua organização
               href: embed-sample-for-your-organization.md
+            - name: Inserir relatórios paginados para clientes
+              href: embed-paginated-reports-customers.md
             - name: Inserir conteúdo para nuvens nacionais
               href: embed-sample-for-customers-national-clouds.md
         - name: Conceitos
@@ -112,6 +114,8 @@
               href: embed-service-principal.md
             - name: Segurança em nível de linha
               href: embedded-row-level-security.md
+            - name: Segurança em nível de linha dos relatórios paginados
+              href: paginated-reports-row-level-security.md
             - name: Gerenciar vários locatários
               href: embed-multi-tenancy.md
             - name: Log de diagnósticos do Azure para o Power BI Embedded
