commit translated contents

--- a/powerbi-docs/TOC.yml
+++ b/powerbi-docs/TOC.yml
@@ -53,6 +53,8 @@
       items:
         - name: Novidades na atualização mais recente do Power BI Desktop
           href: desktop-latest-update.md
+        - name: Modelar relações no Power BI Desktop
+          href: desktop-relationships-understand.md
         - name: Agrupamento de visuais no Power BI Desktop
           href: desktop-grouping-visuals.md
         - name: Uso de modelos no Power BI Desktop
@@ -303,8 +305,6 @@
           items:
             - name: Visualizações no Power BI
               href: visuals/power-bi-report-visualizations.md
-            - name: Melhores práticas de visualização
-              href: visuals/power-bi-visualization-best-practices.md
             - name: Alterar o tipo de visualização em um relatório
               href: visuals/power-bi-report-change-visualization-type.md
             - name: Limites de ponto de dados por tipo de visual
@@ -499,8 +499,7 @@
               href: service-tips-for-finding-help.md
             - name: Notificações de interrupção de serviço
               href: service-interruption-notifications.md
-        - name: |
-            Estenda o Power BI
+        - name: Estenda o Power BI
           items:
             - name: Microsoft Flow e Power BI
               href: service-flow-integration.md
@@ -818,12 +817,6 @@
                   href: service-connect-to-azure-audit-logs.md
                 - name: Azure Mobile Engagement
                   href: service-connect-to-azure-mobile.md
-                - name: Microsoft Azure Consumption Insights
-                  href: service-connect-to-azure-consumption-insights.md
-                - name: Azure Search
-                  href: service-connect-to-azure-search.md
-                - name: ID de circuito
-                  href: service-connect-to-circuit-id.md
                 - name: ClickDimensions
                   href: service-connect-to-clickdimensions.md
                 - name: comScore Digital Analytix
@@ -838,12 +831,6 @@
                   href: service-connect-to-lithium.md
                 - name: Mandrill
                   href: service-connect-to-mandrill.md
-                - name: Microsoft Dynamics AX
-                  href: service-connect-to-microsoft-dynamics-ax.md
-                - name: Microsoft Dynamics CRM
-                  href: service-connect-to-microsoft-dynamics-crm.md
-                - name: Microsoft Dynamics NAV
-                  href: service-connect-to-microsoft-dynamics-nav.md
                 - name: Office365Mon
                   href: service-connect-to-office365mon.md
                 - name: Prevedere
@@ -862,18 +849,12 @@
                   href: service-connect-to-smartsheet.md
                 - name: SQL Sentry
                   href: service-connect-to-sql-sentry.md
-                - name: Stripe
-                  href: service-connect-to-stripe.md
                 - name: SweetIQ
                   href: service-connect-to-sweetiq.md
                 - name: Troux
                   href: service-connect-to-troux.md
                 - name: Twilio
                   href: service-connect-to-twilio.md
-                - name: tyGraph
-                  href: service-connect-to-tygraph.md
-                - name: UserVoice
-                  href: service-connect-to-uservoice.md
                 - name: VMob
                   href: service-connect-to-vmob.md
                 - name: Centro de Desenvolvimento do Windows
@@ -882,8 +863,6 @@
                   href: service-connect-to-xero.md
                 - name: Zendesk
                   href: service-connect-to-zendesk.md
-                - name: Ziosk
-                  href: service-connect-to-ziosk.md
             - name: Pacotes de conteúdo organizacional
               items:
                 - name: Introdução aos pacotes de conteúdo organizacional
