commit translated contents

--- a/powerbi-docs/developer/index.yml
+++ b/powerbi-docs/developer/index.yml
@@ -12,12 +12,12 @@ metadata:
   author: maggiesMSFT
   ms.author: maggies
   ms.date: 10/25/2019
-  ms.openlocfilehash: ac0d2e2955846d7b67e94af923b41c8b5f476996
-  ms.sourcegitcommit: ee0ea65de52b38e5976d6eb15516b0b240fa40f9
+  ms.openlocfilehash: c608a6f69e3e9d614b23df7e04561e5fc2b6840b
+  ms.sourcegitcommit: a5853ef44ed52e80eabee3757bb6887fa400b75b
   ms.translationtype: HT
   ms.contentlocale: pt-BR
-  ms.lasthandoff: 10/26/2019
-  ms.locfileid: "72959543"
+  ms.lasthandoff: 11/07/2019
+  ms.locfileid: "73769787"
 landingContent:
 - title: Sobre o Power BI para desenvolvedores
   linkLists:
@@ -56,7 +56,7 @@ landingContent:
     - text: Diretrizes para visuais
       url: guidelines-powerbi-visuals.md
     - text: Modo de edição avançada em visuais
-      url: /advanced-edit-mode.md
+      url: visuals/advanced-edit-mode.md
   - linkListType: how-to-guide
     links:
     - text: Certificar um visual
