--- a/powerbi-docs/developer/index.yml
+++ b/powerbi-docs/developer/index.yml
@@ -12,12 +12,12 @@ metadata:
   author: maggiesMSFT
   ms.author: maggies
   ms.date: 10/25/2019
-  ms.openlocfilehash: c608a6f69e3e9d614b23df7e04561e5fc2b6840b
-  ms.sourcegitcommit: a5853ef44ed52e80eabee3757bb6887fa400b75b
+  ms.openlocfilehash: 18c09880a7e036c768d67a5df169df3c4c4f0f4c
+  ms.sourcegitcommit: 08b73af260ded51daaa6749338cb85db2eab587f
   ms.translationtype: HT
   ms.contentlocale: pt-BR
-  ms.lasthandoff: 11/07/2019
-  ms.locfileid: "73769787"
+  ms.lasthandoff: 11/15/2019
+  ms.locfileid: "74099408"
 landingContent:
 - title: Sobre o Power BI para desenvolvedores
   linkLists:
@@ -26,7 +26,7 @@ landingContent:
     - text: O que os desenvolvedores podem fazer
       url: what-can-you-do.md
     - text: Visuais no Power BI
-      url: ../power-bi-custom-visuals.md
+      url: power-bi-custom-visuals.md
     - text: O que é inserção
       url: embedding.md
     - text: O que é a API do Power BI?
@@ -52,7 +52,7 @@ landingContent:
   - linkListType: concept
     links:
     - text: Perguntas frequentes sobre visuais
-      url: ../power-bi-custom-visuals-faq.md
+      url: power-bi-custom-visuals-faq.md
     - text: Diretrizes para visuais
       url: guidelines-powerbi-visuals.md
     - text: Modo de edição avançada em visuais
@@ -60,7 +60,7 @@ landingContent:
   - linkListType: how-to-guide
     links:
     - text: Certificar um visual
-      url: ../power-bi-custom-visuals-certified.md
+      url: power-bi-custom-visuals-certified.md
     - text: Publicar visuais personalizados no AppSource
       url: office-store.md
 - title: Análise integrada
