--- a/powerbi-docs/breadcrumb/toc.yml
+++ b/powerbi-docs/breadcrumb/toc.yml
@@ -18,3 +18,6 @@
         - name: Servidor de Relatórios
           tocHref: /power-bi/report-server/
           topicHref: /power-bi/report-server/get-started
+        - name: Diretrizes
+          tocHref: /power-bi/guidance/
+          topicHref: /power-bi/guidance/index
