--- a/powerbi-docs/TOC.yml
+++ b/powerbi-docs/TOC.yml
@@ -513,7 +513,7 @@
               href: service-interruption-notifications.md
         - name: Estenda o Power BI
           items:
-            - name: Microsoft Flow e Power BI
+            - name: Power Automate e Power BI
               href: service-flow-integration.md
             - name: Usar aplicativos de terceiros
               href: service-power-bi-get-started-third-party-apps.md
